Update LectureService logic